--- a/about.html
+++ b/about.html
@@ -1,259 +1,263 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> About HDX</title>
-    <link rel="stylesheet" href="css/all.css" />
-    <link rel="stylesheet" href="css/home.css" />
-  </head>
-  <body>
-    <header>
-      <a href="home.html">
-        <div class="logo">
-          <img src="images/site-logo-free-img-1.png" alt="" />
-        </div>
-       </a>
-      <div class="menu">
-        <ul>
-          <li><a href="home.html">HOME</a></li>
-          <li><a href="allproduucts.html">ALL PRODUCTS</a></li>
-          <li><a href="tshirts.html">TSHIRTS</a></li>
-          <li><a href="mugs.html">MUGS</a></li>
-          <li><a href="about.html" title="color">ABOUT HDX</a></li>
-          <li><a href="contact.html">CONTACT</a></li>
-          <div class="dropdown">
-            <li>
-              <a href="#"
-                >ACCOUNT
-                <i class="fa-solid fa-chevron-down" style="font-size: 10px"></i>
-              </a>
-            </li>
-            <div class="dropdown-content">
-              <a href="MyAccount.html">MY ACCOUNT</a>
-              <a href="cart.html">CART</a>
-            </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title> About HDX</title>
+  <link rel="stylesheet" href="css/all.css" />
+  <link rel="stylesheet" href="css/home.css" />
+</head>
+
+<body>
+  <header>
+    <a href="index.html">
+      <div class="logo">
+        <img src="images/site-logo-free-img-1.png" alt="" />
+      </div>
+    </a>
+    <div class="menu">
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="allproduucts.html">ALL PRODUCTS</a></li>
+        <li><a href="tshirts.html">TSHIRTS</a></li>
+        <li><a href="mugs.html">MUGS</a></li>
+        <li><a href="about.html" title="color">ABOUT HDX</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+        <div class="dropdown">
+          <li>
+            <a href="#">ACCOUNT
+              <i class="fa-solid fa-chevron-down" style="font-size: 10px"></i>
+            </a>
+          </li>
+          <div class="dropdown-content">
+            <a href="MyAccount.html">MY ACCOUNT</a>
+            <a href="cart.html">CART</a>
           </div>
+        </div>
+      </ul>
+    </div>
+    <div class="logo2">
+      <bdi>
+        <span class="one">£0.00</span>
+      </bdi>
+      <span class="icon" onclick="spanicon()">
+        <i class="fa-solid fa-basket-shopping"></i>
+        <span class="box">0</span>
+      </span>
+    </div>
+  </header>
+
+  <div class="Aboutmain">
+    <h5 class="since">
+      -since 1984-
+    </h5>
+    <h1 class="Ah1">
+      We Provide Best-quality Printed Products At Affordable Prices.
+    </h1>
+    <button class="Abtn1">
+      EXPLORE MORE
+      <small>
+        <i class="fa-solid fa-chevron-right A"></i>
+        <i class="fa-solid fa-chevron-right A"></i>
+      </small>
+    </button>
+
+    <hr class="hrA">
+
+
+    <div class="Afourbox">
+      <div class="A1box">
+        <h1>Who We Are</h1>
+        <p class="Ap">
+          Qui dolore ipsum Quia dolor sit
+          amet, consectetur adipisci adipisci velit,
+          sed quia non numquam eius modi
+          tempora incidunt lor.
+        </p>
+      </div>
+      <div class="A2box">
+        <h1>How It Started</h1>
+        <p class="Ap">
+          Qui dolore ipsum Quia dolor sit
+          amet, consectetur adipisci adipisci velit,
+          sed quia non numquam eius modi
+          tempora incidunt lor.
+        </p>
+      </div>
+      <div class="A3box">
+        <h1>Why Choose Us</h1>
+        <p class="Ap">
+          Qui dolore ipsum Quia dolor sit
+          amet, consectetur adipisci adipisci velit,
+          sed quia non numquam eius modi
+          tempora incidunt lor.
+        </p>
+      </div>
+      <div class="A4box">
+        <h1>How It Works</h1>
+        <p class="Ap">
+          Qui dolore ipsum Quia dolor sit
+          amet, consectetur adipisci adipisci velit,
+          sed quia non numquam eius modi
+          tempora incidunt lor.
+        </p>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="A2main">
+    <div class="Aicon">
+      <i class="fas fa-shopping-basket"></i>
+    </div>
+
+    <h1 class="Atext">
+      Best Quality Printed Tshirts And Mugs Very Affordable Price
+    </h1>
+
+    <div class="Atextbox2">
+      <div class="Aleft">
+        <ul class="Aul">
+          <li class="Ali"><a href="">Personal Gifts</a></li>
+          <li class="Ali"><a href="">Occasional Gifts</a></li>
+          <li class="Ali"><a href="">Corporate Gifts</a></li>
         </ul>
       </div>
-      <div class="logo2">
-        <bdi>
-          <span class="one">£0.00</span>
-        </bdi>
-        <span class="icon" onclick="spanicon()">
-          <i class="fa-solid fa-basket-shopping"></i>
-          <span class="box">0</span>
-        </span>
+      <div class="Aright">
+        <ul class="Aul2">
+          <li class="Ali"><a href="">Printed Tshirts</a></li>
+          <li class="Ali"><a href="">Printed Mugs</a></li>
+          <li class="Ali"><a href="">Corporate Gifts</a></li>
+        </ul>
       </div>
-    </header>
+    </div>
 
-    <div class="Aboutmain">  
-        <h5 class="since">
-          -since 1984-
-        </h5>
-        <h1 class="Ah1">
-          We Provide Best-quality Printed Products At Affordable Prices.
-        </h1>
-        <button class="Abtn1">
-          EXPLORE MORE
-          <small>
-            <i class="fa-solid fa-chevron-right A"></i>
-            <i class="fa-solid fa-chevron-right A"></i>
-          </small>
-        </button>
+    <div class="Atextlorem">
+      <p class="Atextlorem1 ">
+        Neque porro quisquam est, qui dolore ipsum quia dolor sit amet, consectetur adipisci velit, sed quia non
+        incidunt lores ta porro ame. numquam eius modi tempora incidunt lores ta porro ame.
+      </p>
+    </div>
+  </div>
 
-        <hr class="hrA">
+  <div class="divred">
+    <h1 class="h1Get">Get Best Offers On All Products!</h1>
+    <button class="Abtn1B">
+      VISIT STORE
+      <small>
+        <i class="fa-solid fa-chevron-right A"></i>
+        <i class="fa-solid fa-chevron-right A"></i>
+      </small>
+    </button>
+  </div>
+
+  <div class="A3main">
+    <div class="A3text">
+      <h1 class="A3h1">Tshirt Printing Is The New Cool!</h1>
+      <p class="A3p">Neque porro quisquam est, qui dolore ipsum quia dolor sit amet, consectetur adipisci velit, sed
+        quia non numquam eius modi tempora incidunt lores ta porro ame.</p>
+      <button class="A3btn1">
+        EXPLORE MORE
+        <small>
+          <i class="fa-solid fa-chevron-right A"></i>
+          <i class="fa-solid fa-chevron-right A"></i>
+        </small>
+      </button>
+    </div>
+  </div>
 
 
-        <div class="Afourbox">
-          <div class="A1box">
-            <h1>Who We Are</h1>
-            <p class="Ap">
-              Qui dolore ipsum Quia dolor sit
-              amet, consectetur adipisci adipisci velit,
-              sed quia non numquam eius modi
-              tempora incidunt lor.
-            </p>
-          </div>
-          <div class="A2box">
-            <h1>How It Started</h1>
-            <p class="Ap"> 
-              Qui dolore ipsum Quia dolor sit
-              amet, consectetur adipisci adipisci velit,
-              sed quia non numquam eius modi
-              tempora incidunt lor.
-            </p>
-          </div>
-          <div class="A3box">
-            <h1>Why Choose Us</h1>
-            <p class="Ap">
-              Qui dolore ipsum Quia dolor sit
-              amet, consectetur adipisci adipisci velit,
-              sed quia non numquam eius modi
-              tempora incidunt lor.
-            </p>
-          </div>
-          <div class="A4box">
-            <h1>How It Works</h1>
-            <p class="Ap">
-              Qui dolore ipsum Quia dolor sit
-              amet, consectetur adipisci adipisci velit,
-              sed quia non numquam eius modi
-              tempora incidunt lor.
-            </p>
-          </div>
-        </div>
-
+  <div class="main10">
+    <div class="box_10_main">
+      <div class="box_10_1">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About HDX</a></li>
+          <li><a href="#">My account</a></li>
+        </ul>
       </div>
+      <div class="box_10_2">
+        <ul>
+          <li><a href="#">Tshirts</a></li>
+          <li><a href="#">Mugs</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+      <div class="box_10_3"></div>
 
-      <div class="A2main">
-        <div class="Aicon">
-          <i class="fas fa-shopping-basket"></i>
+      <div class="box_10_4">
+        <div class="box_icon">
+          <i class="fa-brands fa-square-facebook i_1"></i>
         </div>
 
-        <h1 class="Atext">
-          Best Quality Printed Tshirts And Mugs Very Affordable Price
-        </h1>
-
-        <div class="Atextbox2">
-          <div class="Aleft">
-            <ul class="Aul">
-              <li class="Ali"><a href="">Personal Gifts</a></li>
-              <li class="Ali"><a href="">Occasional Gifts</a></li>
-              <li class="Ali"><a href="">Corporate Gifts</a></li>
-            </ul>
-          </div>
-          <div class="Aright">
-            <ul class="Aul2">
-              <li class="Ali"><a href="">Printed Tshirts</a></li>
-              <li class="Ali"><a href="">Printed Mugs</a></li>
-              <li class="Ali"><a href="">Corporate Gifts</a></li>
-            </ul>
-          </div>
+        <div class="box_icon2">
+          <i class="fa-brands fa-twitter i_2"></i>
         </div>
 
-        <div class="Atextlorem">
-          <p class="Atextlorem1 ">
-            Neque porro quisquam est, qui dolore ipsum quia dolor sit amet, consectetur adipisci velit, sed quia non incidunt lores ta porro ame. numquam eius modi tempora incidunt lores ta porro ame.
-          </p>
+        <div class="box_icon3">
+          <i class="fa-brands fa-square-instagram i_3"></i>
+        </div>
+
+        <div class="box_icon4">
+          <i class="fa-brands fa-google i_4"></i>
+        </div>
+
+        <div class="box_icon5">
+          <i class="fa-brands fa-youtube i_5"></i>
         </div>
       </div>
+    </div>
+  </div>
 
-      <div class="divred">
-        <h1 class="h1Get">Get Best Offers On All Products!</h1>
-        <button class="Abtn1B">
-          VISIT STORE
-          <small>
-            <i class="fa-solid fa-chevron-right A"></i>
-            <i class="fa-solid fa-chevron-right A"></i>
-          </small>
+  <div class="main11">
+    <div class="text_11">
+      <h5 class="p_11">Copyright © 2024 Custom Printing Pro</h5>
+      <h5 class="p_21">Powered by Custom Printing Pro</h5>
+    </div>
+  </div>
+
+
+  <div class="shopingcartmain" style="display: none;">
+    <div class="Shopping-Cart ">
+      <div class="Cart-header">
+        <h3 class="carth3">Shopping Cart</h3>
+        <i class="fa-solid fa-xmark iconX" id="iconX" onclick="iconx1()"></i>
+        <hr class="carthr">
+      </div>
+      <div class="cartm">
+        <h5 class="carth5">No products in the cart.</h5>
+      </div>
+
+      <div class="buttonmain">
+        <button class="Continue-Shopping">
+          CONTINUE SHOPPING
         </button>
       </div>
-     
-      <div class="A3main">
-        <div class="A3text">
-          <h1 class="A3h1">Tshirt Printing Is The New Cool!</h1>
-          <p class="A3p">Neque porro quisquam est, qui dolore ipsum quia dolor sit amet, consectetur adipisci velit, sed quia non numquam eius modi tempora incidunt lores ta porro ame.</p>
-          <button class="A3btn1">
-            EXPLORE MORE
-            <small>
-              <i class="fa-solid fa-chevron-right A"></i>
-              <i class="fa-solid fa-chevron-right A"></i>
-            </small>
-          </button>
-        </div>
-      </div>
+    </div>
+  </div>
 
 
-      <div class="main10">
-        <div class="box_10_main">
-          <div class="box_10_1">
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About HDX</a></li>
-              <li><a href="#">My account</a></li>
-            </ul>
-          </div>
-          <div class="box_10_2">
-            <ul>
-              <li><a href="#">Tshirts</a></li>
-              <li><a href="#">Mugs</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-          </div>
-          <div class="box_10_3"></div>
-  
-          <div class="box_10_4">
-            <div class="box_icon">
-              <i class="fa-brands fa-square-facebook i_1"></i>
-            </div>
-  
-            <div class="box_icon2">
-              <i class="fa-brands fa-twitter i_2"></i>
-            </div>
-  
-            <div class="box_icon3">
-              <i class="fa-brands fa-square-instagram i_3"></i>
-            </div>
-  
-            <div class="box_icon4">
-              <i class="fa-brands fa-google i_4"></i>
-            </div>
-  
-            <div class="box_icon5">
-              <i class="fa-brands fa-youtube i_5"></i>
-            </div>
-          </div>
-        </div>
-      </div>
-  
-      <div class="main11">
-        <div class="text_11">
-          <h5 class="p_11">Copyright © 2024 Custom Printing Pro</h5>
-          <h5 class="p_21">Powered by Custom Printing Pro</h5>
-        </div>
-      </div>
+  <script src="js/jquery-3.7.1.min.js"></script>
+
+  <script>
+
+    function spanicon() {
+      $(".shopingcartmain").show();
+      $("body").css("overflow", "hidden");
+    }
+
+    function iconx1() {
+      $(".shopingcartmain").hide();
+      $(".Shopping-Cart").show();
+      $("body").css("overflow", "auto");
+    }
 
 
-      <div class="shopingcartmain" style="display: none;">
-        <div class="Shopping-Cart " >
-          <div class="Cart-header">
-            <h3 class="carth3">Shopping Cart</h3>
-            <i class="fa-solid fa-xmark iconX" id="iconX" onclick="iconx1()"></i>
-            <hr class="carthr">
-          </div>
-          <div class="cartm">
-            <h5 class="carth5">No products in the cart.</h5>
-          </div>
-    
-          <div class="buttonmain">
-            <button class="Continue-Shopping">
-              CONTINUE SHOPPING
-            </button>
-          </div>
-        </div>
-      </div>
-  
-
-      <script src="js/jquery-3.7.1.min.js"></script>
-
-      <script>
-
-      function spanicon(){
-        $(".shopingcartmain").show();
-        $("body").css("overflow", "hidden") ;
-      }
-
-      function iconx1(){
-        $(".shopingcartmain").hide();
-        $(".Shopping-Cart").show();
-        $("body").css("overflow", "auto" );
-      } 
-
-
-      </script>
+  </script>
 
 
 
-  </body>
+</body>
+
 </html>
