--- a/contact.html
+++ b/contact.html
@@ -1,206 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
-    <link rel="stylesheet" href="css/all.css" />
-    <link rel="stylesheet" href="css/home.css" />
-  </head>
-  <body>
-    <header>
-      <a href="home.html">
-        <div class="logo">
-          <img src="images/site-logo-free-img-1.png" alt="" />
-        </div>
-       </a>
-      <div class="menu">
-        <ul>
-          <li><a href="home.html">HOME</a></li>
-          <li><a href="allproduucts.html">ALL PRODUCTS</a></li>
-          <li><a href="tshirts.html">TSHIRTS</a></li>
-          <li><a href="mugs.html">MUGS</a></li>
-          <li><a href="about.html">ABOUT HDX</a></li>
-          <li><a href="contact.html" title="color">CONTACT</a></li>
-          <div class="dropdown">
-            <li>
-              <a href="#"
-                >ACCOUNT
-                <i class="fa-solid fa-chevron-down" style="font-size: 10px"></i>
-              </a>
-            </li>
-            <div class="dropdown-content">
-              <a href="MyAccount.html">MY ACCOUNT</a>
-              <a href="cart.html">CART</a>
-            </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact</title>
+  <link rel="stylesheet" href="css/all.css" />
+  <link rel="stylesheet" href="css/home.css" />
+</head>
+
+<body>
+  <header>
+    <a href="index.html">
+      <div class="logo">
+        <img src="images/site-logo-free-img-1.png" alt="" />
+      </div>
+    </a>
+    <div class="menu">
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="allproduucts.html">ALL PRODUCTS</a></li>
+        <li><a href="tshirts.html">TSHIRTS</a></li>
+        <li><a href="mugs.html">MUGS</a></li>
+        <li><a href="about.html">ABOUT HDX</a></li>
+        <li><a href="contact.html" title="color">CONTACT</a></li>
+        <div class="dropdown">
+          <li>
+            <a href="#">ACCOUNT
+              <i class="fa-solid fa-chevron-down" style="font-size: 10px"></i>
+            </a>
+          </li>
+          <div class="dropdown-content">
+            <a href="MyAccount.html">MY ACCOUNT</a>
+            <a href="cart.html">CART</a>
           </div>
+        </div>
+      </ul>
+    </div>
+    <div class="logo2">
+      <bdi>
+        <span class="one">£0.00</span>
+      </bdi>
+      <span class="icon" onclick="spanicon()">
+        <i class="fa-solid fa-basket-shopping"></i>
+        <span class="box">0</span>
+      </span>
+    </div>
+  </header>
+
+
+  <div class="Cmain">
+
+    <div class="C_left">
+      <h1 class="C_h1">Say Hello.</h1>
+      <p class="C_p1">Qui dolore ipsum quia dolor sit amet, consectetur <br>
+        adipisci velit, sed quia non numquam eius <br>
+        modi Neque porro quis quam est.</p>
+      <p class="C_p2">
+        212 7th St SE, Washington, DC 20003, USA
+      </p>
+      <p class="C_p2">
+        info@example.com
+      </p>
+    </div>
+
+    <div class="C_right">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317716.6064542155!2d-0.43124416199481663!3d51.52860701284126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C%20UK!5e0!3m2!1sen!2sus!4v1729750670653!5m2!1sen!2sus"
+        width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
+  </div>
+
+
+
+  <div class="contact">
+    <div class="box1">
+      <h2>Send Us A Message</h2>
+      <div class="one">
+        <div class="left"><input type="text" placeholder="First Name" class="i1"></div>
+        <div class="right"><input type="text" placeholder="Last Name" class="i1"></div>
+      </div>
+      <div class="two">
+        <input type="email" placeholder="Your Email" class="i2">
+      </div>
+      <div class="two">
+        <input type="email" placeholder="Subject" class="i2">
+      </div>
+      <div class="three">
+        <textarea name="" class="i2" placeholder="Massage"></textarea>
+      </div>
+      <button class="btn">Send Massage</button>
+    </div>
+  </div>
+
+
+  <div class="mainC3">
+
+    <div class="divbox">
+      <h3>Business</h3>
+      <h1>123 456 7890</h1>
+    </div>
+
+    <div class="divbox">
+      <h3>Orders</h3>
+      <h1>123 456 7890</h1>
+    </div>
+
+    <div class="divbox">
+      <h3>Support</h3>
+      <h1>123 456 7890</h1>
+    </div>
+
+  </div>
+
+
+  <div class="main10">
+    <div class="box_10_main">
+      <div class="box_10_1">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About HDX</a></li>
+          <li><a href="#">My account</a></li>
         </ul>
       </div>
-      <div class="logo2">
-        <bdi>
-          <span class="one">£0.00</span>
-        </bdi>
-        <span class="icon" onclick="spanicon()">
-          <i class="fa-solid fa-basket-shopping"></i>
-          <span class="box">0</span>
-        </span>
+      <div class="box_10_2">
+        <ul>
+          <li><a href="#">Tshirts</a></li>
+          <li><a href="#">Mugs</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
       </div>
-    </header>
+      <div class="box_10_3"></div>
 
-
-      <div class="Cmain">
-
-        <div class="C_left">
-          <h1 class="C_h1">Say Hello.</h1>
-          <p class="C_p1">Qui dolore ipsum quia dolor sit amet, consectetur <br>
-            adipisci velit, sed quia non numquam eius <br>
-            modi Neque porro quis quam est.</p>
-            <p class="C_p2">
-              212 7th St SE, Washington, DC 20003, USA
-            </p>
-            <p class="C_p2">
-              info@example.com
-            </p>
+      <div class="box_10_4">
+        <div class="box_icon">
+          <i class="fa-brands fa-square-facebook i_1"></i>
         </div>
 
-        <div class="C_right">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317716.6064542155!2d-0.43124416199481663!3d51.52860701284126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C%20UK!5e0!3m2!1sen!2sus!4v1729750670653!5m2!1sen!2sus" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
+        <div class="box_icon2">
+          <i class="fa-brands fa-twitter i_2"></i>
         </div>
 
-      </div>
+        <div class="box_icon3">
+          <i class="fa-brands fa-square-instagram i_3"></i>
+        </div>
 
+        <div class="box_icon4">
+          <i class="fa-brands fa-google i_4"></i>
+        </div>
 
-
-      <div class="contact">
-        <div class="box1">
-          <h2>Send Us A Message</h2>
-          <div class="one">
-            <div class="left"><input type="text" placeholder="First Name" class="i1"></div>
-            <div class="right"><input type="text" placeholder="Last Name" class="i1"></div>
-          </div>
-          <div class="two">
-            <input type="email" placeholder="Your Email" class="i2">
-          </div>
-          <div class="two">
-            <input type="email" placeholder="Subject" class="i2">
-          </div>
-          <div class="three">
-            <textarea name="" class="i2" placeholder="Massage"></textarea>
-          </div>
-          <button class="btn">Send Massage</button>
+        <div class="box_icon5">
+          <i class="fa-brands fa-youtube i_5"></i>
         </div>
       </div>
-      
+    </div>
+  </div>
 
-      <div class="mainC3">
+  <div class="main11">
+    <div class="text_11">
+      <h5 class="p_11">Copyright © 2024 Custom Printing Pro</h5>
+      <h5 class="p_21">Powered by Custom Printing Pro</h5>
+    </div>
+  </div>
 
-        <div class="divbox">
-          <h3>Business</h3>
-          <h1>123 456 7890</h1>
-        </div>
 
-        <div class="divbox">
-          <h3>Orders</h3>
-          <h1>123 456 7890</h1>
-        </div>
-
-        <div class="divbox">
-          <h3>Support</h3>
-          <h1>123 456 7890</h1>
-        </div>
-
+  <div class="shopingcartmain" style="display: none;">
+    <div class="Shopping-Cart ">
+      <div class="Cart-header">
+        <h3 class="carth3">Shopping Cart</h3>
+        <i class="fa-solid fa-xmark iconX" id="iconX" onclick="iconx1()"></i>
+        <hr class="carthr">
+      </div>
+      <div class="cartm">
+        <h5 class="carth5">No products in the cart.</h5>
       </div>
 
-
-      <div class="main10">
-        <div class="box_10_main">
-          <div class="box_10_1">
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About HDX</a></li>
-              <li><a href="#">My account</a></li>
-            </ul>
-          </div>
-          <div class="box_10_2">
-            <ul>
-              <li><a href="#">Tshirts</a></li>
-              <li><a href="#">Mugs</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-          </div>
-          <div class="box_10_3"></div>
-  
-          <div class="box_10_4">
-            <div class="box_icon">
-              <i class="fa-brands fa-square-facebook i_1"></i>
-            </div>
-  
-            <div class="box_icon2">
-              <i class="fa-brands fa-twitter i_2"></i>
-            </div>
-  
-            <div class="box_icon3">
-              <i class="fa-brands fa-square-instagram i_3"></i>
-            </div>
-  
-            <div class="box_icon4">
-              <i class="fa-brands fa-google i_4"></i>
-            </div>
-  
-            <div class="box_icon5">
-              <i class="fa-brands fa-youtube i_5"></i>
-            </div>
-          </div>
-        </div>
+      <div class="buttonmain">
+        <button class="Continue-Shopping">
+          CONTINUE SHOPPING
+        </button>
       </div>
-
-      <div class="main11">
-        <div class="text_11">
-          <h5 class="p_11">Copyright © 2024 Custom Printing Pro</h5>
-          <h5 class="p_21">Powered by Custom Printing Pro</h5>
-        </div>
-      </div>
+    </div>
+  </div>
 
 
-      <div class="shopingcartmain" style="display: none;">
-        <div class="Shopping-Cart " >
-          <div class="Cart-header">
-            <h3 class="carth3">Shopping Cart</h3>
-            <i class="fa-solid fa-xmark iconX" id="iconX" onclick="iconx1()"></i>
-            <hr class="carthr">
-          </div>
-          <div class="cartm">
-            <h5 class="carth5">No products in the cart.</h5>
-          </div>
-    
-          <div class="buttonmain">
-            <button class="Continue-Shopping">
-              CONTINUE SHOPPING
-            </button>
-          </div>
-        </div>
-      </div>
+  <script src="js/jquery-3.7.1.min.js"></script>
+
+  <script>
+
+    function spanicon() {
+      $(".shopingcartmain").show();
+      $("body").css("overflow", "hidden");
+    }
+
+    function iconx1() {
+      $(".shopingcartmain").hide();
+      $(".Shopping-Cart").show();
+      $("body").css("overflow", "auto");
+    }
 
 
-      <script src="js/jquery-3.7.1.min.js"></script>
-
-      <script>
-
-      function spanicon(){
-        $(".shopingcartmain").show();
-        $("body").css("overflow", "hidden") ;
-      }
-
-      function iconx1(){
-        $(".shopingcartmain").hide();
-        $(".Shopping-Cart").show();
-        $("body").css("overflow", "auto" );
-      } 
-
-
-      </script>
+  </script>
 
 
 
-    </body>
-    </html>
+</body>
+
+</html>
