--- a/PrintedBlueTshirt.html
+++ b/PrintedBlueTshirt.html
@@ -19,14 +19,14 @@
 
   <body>
     <header>
-      <a href="home.html">
+      <a href="index.html">
         <div class="logo">
           <img src="images/site-logo-free-img-1.png" alt="" />
         </div>
       </a>
       <div class="menu">
         <ul>
-          <li><a href="home.html">HOME</a></li>
+          <li><a href="index.html">HOME</a></li>
           <li><a href="allproduucts.html">ALL PRODUCTS</a></li>
           <li><a href="tshirts.html">TSHIRTS</a></li>
           <li><a href="mugs.html">MUGS</a></li>
