--- a/mugs.html
+++ b/mugs.html
@@ -1,320 +1,313 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Mug's</title>
-    <link rel="stylesheet" href="css/all.css" />
-    <link rel="stylesheet" href="css/home.css" />
-    <style>
-      body {
-        background-color: #f5f5f5;
-      }
-      header {
-        background-color: white;
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <a href="home.html">
-        <div class="logo">
-          <img src="images/site-logo-free-img-1.png" alt="" />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title> Mug's</title>
+  <link rel="stylesheet" href="css/all.css" />
+  <link rel="stylesheet" href="css/home.css" />
+  <style>
+    body {
+      background-color: #f5f5f5;
+    }
+
+    header {
+      background-color: white;
+    }
+  </style>
+</head>
+
+<body>
+  <header>
+    <a href="index.html">
+      <div class="logo">
+        <img src="images/site-logo-free-img-1.png" alt="" />
+      </div>
+    </a>
+    <div class="menu">
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="allproduucts.html">ALL PRODUCTS</a></li>
+        <li><a href="tshirts.html">TSHIRTS</a></li>
+        <li><a href="mugs.html" title="color">MUGS</a></li>
+        <li><a href="about.html">ABOUT HDX</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+        <div class="dropdown">
+          <li>
+            <a href="#">ACCOUNT
+              <i class="fa-solid fa-chevron-down" style="font-size: 10px"></i>
+            </a>
+          </li>
+          <div class="dropdown-content">
+            <a href="MyAccount.html">MY ACCOUNT</a>
+            <a href="cart.html">CART</a>
+          </div>
         </div>
-       </a>
-      <div class="menu">
+      </ul>
+    </div>
+    <div class="logo2">
+      <bdi>
+        <span class="one">£0.00</span>
+      </bdi>
+      <span class="icon" onclick="spanicon()">
+        <i class="fa-solid fa-basket-shopping"></i>
+        <span class="box">0</span>
+      </span>
+    </div>
+  </header>
+
+  <div class="menu_header">
+    <div class="allbox1" onclick="filterBtn()">
+      <span class="filterBox">
+        <i class="fa-solid fa-bars"></i>
+        FILTER
+      </span>
+      <h4 class="all_h41">Showing 1–9 of 11 results</h4>
+    </div>
+    <div class="allbox2">
+    </div>
+  </div>
+
+
+  <div class="all_mugs1">
+    <div class="box_a_b">
+      <div class="all_box_img">
+        <img src="images/mug-white-768x768.jpg" alt="" class="img_all1">
+        <div class="all_view">
+          Quick View
+        </div>
+      </div>
+      <div class="all_info">
+        <div class="mug_p">Mug</div>
+        <h2 class="allmug_h2">Black Printed Coffee Mug</h2>
+        <div class="all_star_icon">
+          <i class="fa-regular fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+        </div>
+        <div class="strike_text">
+          £25.00
+        </div>
+      </div>
+    </div>
+
+
+    <div class="box_a_b">
+      <div class="all_box_img">
+        <img src="images/mug-coffee.jpg" alt="" class="img_all1">
+        <div class="all_view">
+          Quick View
+        </div>
+      </div>
+      <div class="all_info">
+        <div class="mug_p">Mug</div>
+        <h2 class="allmug_h2">Father’s Day Coffee Mug</h2>
+        <div class="all_star_icon">
+          <i class="fa-regular fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+        </div>
+        <div class="strike_text">
+          £25.00
+        </div>
+      </div>
+    </div>
+
+    <div class="box_a_b">
+      <div class="all_box_img">
+        <img src="images/mug-yellow-768x768.jpg" alt="" class="img_all1">
+        <div class="all_view">
+          Quick View
+        </div>
+      </div>
+      <div class="all_info">
+        <div class="mug_p">Mug</div>
+        <h2 class="allmug_h2">Personalised Mug</h2>
+        <div class="all_star_icon">
+          <i class="fa-regular fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+        </div>
+        <div class="strike_text">
+          £25.00
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="box_hideM">
+    <div class="box_a_bH1_M">
+      <div class="all_box_img_M">
+        <img src="images/mug-blue.jpg" alt="" class="img_all1_M">
+        <div class="all_view_M">
+          Quick View
+        </div>
+      </div>
+      <div class="all_info_M">
+        <div class="mug_p_M">Mug</div>
+        <h2 class="allmug_h2_M">Valentine’s Day Special Mug</h2>
+        <div class="all_star_icon_M">
+          <i class="fa-regular fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+        </div>
+        <div class="strike_text_M">
+          £25.00
+        </div>
+      </div>
+    </div>
+
+
+    <div class="box_a_bH1_M">
+      <div class="all_box_img_M">
+        <img src="images/mug-red.jpg" alt="" class="img_all1_M">
+        <div class="all_view_M">
+          Quick View
+        </div>
+      </div>
+      <div class="all_info_M">
+        <div class="mug_p_M">Mug</div>
+        <h2 class="allmug_h2_M">Father’s Day Coffee Mug</h2>
+        <div class="all_star_icon_M">
+          <i class="fa-regular fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+        </div>
+        <div class="strike_text_M">
+          £25.00
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="main10" style="margin-top: 50px;">
+    <div class="box_10_main">
+      <div class="box_10_1">
         <ul>
-          <li><a href="home.html">HOME</a></li>
-          <li><a href="allproduucts.html">ALL PRODUCTS</a></li>
-          <li><a href="tshirts.html">TSHIRTS</a></li>
-          <li><a href="mugs.html"  title="color">MUGS</a></li>
-          <li><a href="about.html">ABOUT HDX</a></li>
-          <li><a href="contact.html">CONTACT</a></li>
-          <div class="dropdown">
-            <li>
-              <a href="#"
-                >ACCOUNT
-                <i class="fa-solid fa-chevron-down" style="font-size: 10px"></i>
-              </a>
-            </li>
-            <div class="dropdown-content">
-              <a href="MyAccount.html">MY ACCOUNT</a>
-              <a href="cart.html">CART</a>
-            </div>
-          </div>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About HDX</a></li>
+          <li><a href="#">My account</a></li>
         </ul>
       </div>
-      <div class="logo2">
-        <bdi>
-          <span class="one">£0.00</span>
-        </bdi>
-        <span class="icon" onclick="spanicon()">
-          <i class="fa-solid fa-basket-shopping"></i>
-          <span class="box">0</span>
-        </span>
-      </div>
-    </header>
-
-    <div class="menu_header">
-      <div class="allbox1" onclick="filterBtn()">
-        <span class="filterBox">
-          <i class="fa-solid fa-bars"></i>
-          FILTER
-        </span>
-        <h4 class="all_h41">Showing 1–9 of 11 results</h4>
-      </div>
-      <div class="allbox2">
-        <form class="Ordering">
-          <select class="select">
-            <option value="">Default sorting</option>
-            <option value="">Sort by popularity</option>  
-            <option value="">Sort by average rating</option>
-            <option value="">Sort by latest</option>
-            <option value="">Sort by price: low to high</option>
-            <option value="">Sort by price: high to low</option>
-          </select>
-        </form>
-      </div>
-    </div>
-
-
-    <div class="all_mugs1">
-        <div class="box_a_b">
-          <div class="all_box_img">
-            <img src="images/mug-white-768x768.jpg" alt="" class="img_all1">
-            <div class="all_view">
-              Quick View
-            </div>
-          </div>
-          <div class="all_info">
-            <div class="mug_p">Mug</div>
-            <h2 class="allmug_h2">Black Printed Coffee Mug</h2>
-            <div class="all_star_icon">
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-            </div>
-            <div class="strike_text">
-              £25.00
-            </div>
-          </div>
-        </div>
-  
-  
-        <div class="box_a_b">
-          <div class="all_box_img">
-            <img src="images/mug-coffee.jpg" alt="" class="img_all1">
-            <div class="all_view">
-              Quick View
-            </div>
-          </div>
-          <div class="all_info">
-            <div class="mug_p">Mug</div>
-            <h2 class="allmug_h2">Father’s Day Coffee Mug</h2>
-            <div class="all_star_icon">
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-            </div>
-            <div class="strike_text">
-              £25.00
-            </div>
-          </div>
-        </div>
-  
-        <div class="box_a_b">
-          <div class="all_box_img">
-            <img src="images/mug-yellow-768x768.jpg" alt="" class="img_all1"  >
-            <div class="all_view">
-              Quick View
-            </div>
-          </div>
-          <div class="all_info">
-            <div class="mug_p">Mug</div>
-            <h2 class="allmug_h2">Personalised Mug</h2>
-            <div class="all_star_icon">
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-            </div>
-            <div class="strike_text">
-              £25.00
-            </div>
-          </div>
-        </div>
-      </div>
-      
-      <div class="box_hideM">
-        <div class="box_a_bH1_M">
-          <div class="all_box_img_M">
-            <img src="images/mug-blue.jpg" alt="" class="img_all1_M">
-            <div class="all_view_M">
-              Quick View
-            </div>
-          </div>
-          <div class="all_info_M">
-            <div class="mug_p_M">Mug</div>
-            <h2 class="allmug_h2_M">Valentine’s Day Special Mug</h2>
-            <div class="all_star_icon_M">
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-            </div>
-            <div class="strike_text_M">
-              £25.00
-            </div>
-          </div>
-        </div>
-  
-  
-        <div class="box_a_bH1_M">
-          <div class="all_box_img_M">
-            <img src="images/mug-red.jpg" alt="" class="img_all1_M">
-            <div class="all_view_M">
-              Quick View
-            </div>
-          </div>
-          <div class="all_info_M">
-            <div class="mug_p_M">Mug</div>
-            <h2 class="allmug_h2_M">Father’s Day Coffee Mug</h2>
-            <div class="all_star_icon_M">
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-            </div>
-            <div class="strike_text_M">
-              £25.00
-            </div>
-          </div>
-        </div>
-  
-      </div>
-
-    <div class="main10" style="margin-top: 50px;">
-        <div class="box_10_main">
-          <div class="box_10_1">
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About HDX</a></li>
-              <li><a href="#">My account</a></li>
-            </ul>
-          </div>
-          <div class="box_10_2">
-            <ul>
-              <li><a href="#">Tshirts</a></li>
-              <li><a href="#">Mugs</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-          </div>
-          <div class="box_10_3"></div>
-  
-          <div class="box_10_4">
-            <div class="box_icon">
-              <i class="fa-brands fa-square-facebook i_1"></i>
-            </div>
-  
-            <div class="box_icon2">
-              <i class="fa-brands fa-twitter i_2"></i>
-            </div>
-  
-            <div class="box_icon3">
-              <i class="fa-brands fa-square-instagram i_3"></i>
-            </div>
-  
-            <div class="box_icon4">
-              <i class="fa-brands fa-google i_4"></i>
-            </div>
-  
-            <div class="box_icon5">
-              <i class="fa-brands fa-youtube i_5"></i>
-            </div>
-          </div>
-        </div>
-      </div>
-  
-      <div class="main11">
-        <div class="text_11">
-          <h5 class="p_11">Copyright © 2024 Custom Printing Pro</h5>
-          <h5 class="p_21">Powered by Custom Printing Pro</h5>
-        </div>
-      </div>
-
-
-    <div class="mainsidebar" style="display: none;">
-      <div class="sidebar">
-        <i class="fa-solid fa-xmark" id="iconX" onclick="iconx()"></i>
-        <h2 class="sidebar_h2">
-          Product categories
-        </h2>
-        <ul class="sidebar_ul">
-          <li class="sidebar_li"><a class="s_a" href="">Mugs</a></li>
-          <li class="sidebar_li"><a class="s_a" href="">Tshirts</a></li>
-          <li class="sidebar_li"><a class="s_a" href="">Uncategorized</a></li>
+      <div class="box_10_2">
+        <ul>
+          <li><a href="#">Tshirts</a></li>
+          <li><a href="#">Mugs</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
-        <h2 class="sidebar_h2">
-          Filter by price
-        </h2>
-        <input type="range" min="10" max="10000" id="range" class="range">
       </div>
-    </div>
+      <div class="box_10_3"></div>
 
-      <div class="shopingcartmain" style="display: none;">
-        <div class="Shopping-Cart " >
-          <div class="Cart-header">
-            <h3 class="carth3">Shopping Cart</h3>
-            <i class="fa-solid fa-xmark iconX" id="iconX" onclick="iconx1()"></i>
-            <hr class="carthr">
-          </div>
-          <div class="cartm">
-            <h5 class="carth5">No products in the cart.</h5>
-          </div>
-    
-          <div class="buttonmain">
-            <button class="Continue-Shopping">
-              CONTINUE SHOPPING
-            </button>
-          </div>
+      <div class="box_10_4">
+        <div class="box_icon">
+          <i class="fa-brands fa-square-facebook i_1"></i>
+        </div>
+
+        <div class="box_icon2">
+          <i class="fa-brands fa-twitter i_2"></i>
+        </div>
+
+        <div class="box_icon3">
+          <i class="fa-brands fa-square-instagram i_3"></i>
+        </div>
+
+        <div class="box_icon4">
+          <i class="fa-brands fa-google i_4"></i>
+        </div>
+
+        <div class="box_icon5">
+          <i class="fa-brands fa-youtube i_5"></i>
         </div>
       </div>
-  
+    </div>
+  </div>
 
-      <script src="js/jquery-3.7.1.min.js"></script>
-
-    <script>
-           function filterBtn(){
-        $(".mainsidebar").show();
-        $("body").css("overflow", "hidden") ;
-      }
-
-      function iconx(){
-        $(".mainsidebar").hide();
-        $("body").css("overflow", "auto");
-      }
+  <div class="main11">
+    <div class="text_11">
+      <h5 class="p_11">Copyright © 2024 Custom Printing Pro</h5>
+      <h5 class="p_21">Powered by Custom Printing Pro</h5>
+    </div>
+  </div>
 
 
-      function spanicon(){
-        $(".shopingcartmain").show();
-        $("body").css("overflow", "hidden") ;
-      }
+  <div class="mainsidebar" style="display: none;">
+    <div class="sidebar">
+      <i class="fa-solid fa-xmark" id="iconX" onclick="iconx()"></i>
+      <h2 class="sidebar_h2">
+        Product categories
+      </h2>
+      <ul class="sidebar_ul">
+        <li class="sidebar_li"><a class="s_a" href="">Mugs</a></li>
+        <li class="sidebar_li"><a class="s_a" href="">Tshirts</a></li>
+        <li class="sidebar_li"><a class="s_a" href="">Uncategorized</a></li>
+      </ul>
+      <h2 class="sidebar_h2">
+        Filter by price
+      </h2>
+      <input type="range" min="10" max="10000" id="range" class="range">
+    </div>
+  </div>
 
-      function iconx1(){
-        $(".shopingcartmain").hide();
-        $(".Shopping-Cart").show();
-        $("body").css("overflow", "auto" );
-      } 
+  <div class="shopingcartmain" style="display: none;">
+    <div class="Shopping-Cart ">
+      <div class="Cart-header">
+        <h3 class="carth3">Shopping Cart</h3>
+        <i class="fa-solid fa-xmark iconX" id="iconX" onclick="iconx1()"></i>
+        <hr class="carthr">
+      </div>
+      <div class="cartm">
+        <h5 class="carth5">No products in the cart.</h5>
+      </div>
 
-    </script>
+      <div class="buttonmain">
+        <button class="Continue-Shopping">
+          CONTINUE SHOPPING
+        </button>
+      </div>
+    </div>
+  </div>
 
 
-    </body>
+  <script src="js/jquery-3.7.1.min.js"></script>
+
+  <script>
+    function filterBtn() {
+      $(".mainsidebar").show();
+      $("body").css("overflow", "hidden");
+    }
+
+    function iconx() {
+      $(".mainsidebar").hide();
+      $("body").css("overflow", "auto");
+    }
+
+
+    function spanicon() {
+      $(".shopingcartmain").show();
+      $("body").css("overflow", "hidden");
+    }
+
+    function iconx1() {
+      $(".shopingcartmain").hide();
+      $(".Shopping-Cart").show();
+      $("body").css("overflow", "auto");
+    }
+
+  </script>
+
+
+</body>
+
 </html>
